# kreuz

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
crates/dome/: Cargo.toml
crates/dome/src/: arena.rs  dom.rs  drawer.rs  events.rs  lib.rs  nodes.rs  paint.rs  regions.rs  styles.rs  text.rs  view.rs  window.rs
crates/kreuz-dom/: Cargo.toml
crates/kreuz-ui/: Cargo.toml
crates/kreuz-ui/src/: dummy.rs  lib.rs  scene.rs  view.rs  view_event.rs
crates/kreuz-vello/: Cargo.toml
crates/kreuz-vello/src/: lib.rs
crates/kreuz-widgets/: Cargo.toml
crates/kreuz-window/: Cargo.toml
crates/kreuz-window/src/: application.rs  lib.rs  window.rs  window_event.rs
crates/kreuz-winit/: Cargo.toml
crates/kreuz-winit/src/: lib.rs  subwindow.rs  window.rs
glazier/: Cargo.toml
glazier/examples/: edit_text.rs  pen.rs  shello.rs
glazier/examples/render-text/: Cargo.toml
glazier/examples/render-text/src/: main.rs
glazier/examples/wgpu-triangle/: Cargo.toml
glazier/examples/wgpu-triangle/src/: main.rs
glazier/src/: util.rs  window.rs
glazier/src/backend/linux/: window.rs
glazier/src/backend/mac/: mod.rs  window.rs
glazier/src/backend/wayland/: application.rs  window.rs
glazier/src/backend/wayland/input/: mod.rs
glazier/src/backend/web/: window.rs
glazier/src/backend/windows/: window.rs
glazier/src/backend/x11/: application.rs  clipboard.rs  window.rs
src/: lib.rs  main.rs  text.rs
vello/examples/simple_sdl2/: Cargo.toml
