[workspace]
resolver = "2"
members = [
    ".",
    "crates/*",

    "vello/vello",
    "vello/vello_encoding",
    "vello/vello_shaders",
    "vello/vello_tests",

    "vello/examples/headless",
    "vello/examples/with_winit",
    "vello/examples/run_wasm",
    "vello/examples/scenes",
    "vello/examples/simple",
    "vello/examples/simple_sdl2",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.76"
license = "MIT or Apache 2.0"
repository = "https://github.com/rottenfront/kreuz"

[workspace.dependencies]
vello = { version = "0.3.0", path = "vello/vello" }
vello_encoding = { version = "0.3.0", path = "vello/vello_encoding" }
vello_shaders = { version = "0.3.0", path = "vello/vello_shaders" }
scenes = { path = "vello/examples/scenes" }

bytemuck = { version = "1.18.0", features = ["derive"] }
skrifa = "0.24.1"
peniko = "0.2.0"
kurbo = "0.11.0"
futures-intrusive = "0.5.0"
raw-window-handle = "0.6.2"
smallvec = "1.13.2"
static_assertions = "1.1.0"
thiserror = "2.0.2"

wgpu = { version = "22.1.0" }
log = "0.4.22"
image = { version = "0.25.5", default-features = false }

clap = "4.5.19"
anyhow = "1.0.93"
pollster = "0.4.0"
web-time = "1.1.0"
wgpu-profiler = "0.18.2"

winit = "0.30.5"

# abstractions
kreuz-ui = { path = "crates/kreuz-ui" }
kreuz-window = { path = "crates/kreuz-window" }

# implementations
kreuz-vello = { path = "crates/kreuz-vello" }
kreuz-winit = { path = "crates/kreuz-winit" }

[workspace.lints]
clippy.doc_markdown = "warn"
clippy.semicolon_if_nothing_returned = "warn"

[package]
name = "kreuz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kreuz-ui.workspace = true
kreuz-vello.workspace = true
kreuz-winit.workspace = true
