[package]
name = "glazier"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/linebender/glazier"
description = "Cross-platform native API abstraction for building GUI applications."
keywords = ["gui", "native", "window", "menu", "winit"]
categories = [
    "gui",
    "os",
    "os::windows-apis",
    "os::macos-apis",
    "os::linux-apis",
]
exclude = ["/.github/"]
publish = false # Until it's ready

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-pc-windows-msvc"
# rustdoc-scrape-examples tracking issue https://github.com/rust-lang/rust/issues/88791
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
default = ["x11", "wayland"]
x11 = ["ashpd", "bindgen", "futures", "nix", "pkg-config", "x11rb"]
wayland = [
    # Required for XKBCommon
    "pkg-config",
    "bindgen",
    "nix",
    "smithay-client-toolkit",
    "wayland-backend",
]

[dependencies]
kurbo = "0.11"
tracing = { version = "0.1.22", features = ["log"] }
lazy_static = "1.4.0"
cfg-if = "1.0.0"
instant = { version = "0.1.6", features = ["wasm-bindgen"] }
anyhow = "1.0.32"
keyboard-types = { version = "0.7", default-features = false }
memchr = "2.5"
flo_binding = "2.2"

# Optional dependencies
raw-window-handle = { version = "0.6" }
once_cell = { version = "1", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
scopeguard = "1.1.0"
wio = "0.2.2"
once_cell = "1"

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.9"
features = [
    "winbase",
    "libloaderapi",
    "errhandlingapi",
    "winuser",
    "shellscalingapi",
    "shobjidl",
    "combaseapi",
    "dxgi1_3",
    "dwmapi",
    "wincon",
    "fileapi",
    "processenv",
    "winbase",
    "winerror",
    "handleapi",
    "shellapi",
    "winnls",
]

[target.'cfg(target_os="macos")'.dependencies]
block = "0.1.6"
cocoa = "0.26"
objc = "0.2.7"
core-graphics = "0.24"
bitflags = "2.6"

[target.'cfg(any(target_os = "freebsd", target_os="linux", target_os="openbsd"))'.dependencies]
ashpd = { version = "0.9.1", optional = true }
futures = { version = "0.3.24", optional = true, features = ["executor"] }

nix = { version = "0.25.0", optional = true }

x11rb = { version = "0.13", features = [
    "allow-unsafe-code",
    "present",
    "render",
    "randr",
    "xfixes",
    "xkb",
    "resource_manager",
    "cursor",
    "xinput",
    "dri3",
], optional = true }

rand = { version = "0.8.0", optional = true }
log = { version = "0.4.14", optional = true }

smithay-client-toolkit = { version = "0.19.2", optional = true, default-features = false, features = [
    # Don't use the built-in xkb handling
    "calloop",
] }
# Wayland dependencies
# Needed for supporting RawWindowHandle
wayland-backend = { version = "0.3.7", default-features = false, features = [
    "client_system",
], optional = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.67"
js-sys = "0.3.44"

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3.44"
features = [
    "Window",
    "MouseEvent",
    "CssStyleDeclaration",
    "WheelEvent",
    "KeyEvent",
    "KeyboardEvent",
    "Navigator",
]

[target.'cfg(any(target_os = "freebsd", target_os="linux", target_os="openbsd"))'.build-dependencies]
bindgen = { version = "0.70", optional = true }
pkg-config = { version = "0.3.25", optional = true }

[dev-dependencies]
static_assertions = "1.1.0"
test-log = { version = "0.2.5", features = ["trace"], default-features = false }

[[example]]
name = "shello"
# This actually enables scraping for all examples, not just `shello`.
# However it is possible to add another [[example]] entry to disable it for a specific example.
doc-scrape-examples = true
