[package]
name = "kreuz-vello"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vello.workspace = true

peniko.workspace = true
pollster.workspace = true

kreuz-ui.workspace = true
kreuz-window.workspace = true

[lints]
workspace = true
