[package]
name = "kreuz-window"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
peniko.workspace = true
anyhow.workspace = true
winit.workspace = true
raw-window-handle.workspace = true

[lints]
workspace = true
