[package]
name = "kreuz-winit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vello.workspace = true
peniko.workspace = true
anyhow.workspace = true
winit.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true

kreuz-window.workspace = true

[lints]
workspace = true
