[package]
name = "wgpu-triangle"
version = "0.1.0"
edition = "2021"

[dependencies]
glazier.workspace = true
pretty_env_logger = "0.5"
static_assertions = "1.1.0"
test-log = { version = "0.2.5", features = ["trace"], default-features = false }
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
unicode-segmentation = "1.7.0"
pollster = "0.3.0"
wgpu.workspace = true
